# QXMPP-CMake

./: CMakeLists.txt
src/client/: QXmppOutgoingClient.cpp
